[gd_scene load_steps=4 format=3 uid="uid://2qw4hf22wbri"]

[ext_resource type="Script" uid="uid://qdpf4x5gksq6" path="res://scripts/BrailleTerminal.gd" id="1_m430i"]
[ext_resource type="Texture2D" uid="uid://dedclh8p163h6" path="res://art/dot_sprite_2.png" id="2_vs6ym"]
[ext_resource type="Script" uid="uid://baon156jihyq4" path="res://scripts/enter_button_terminal.gd" id="4_dhnb1"]

[node name="CanvasLayer" type="Control"]
light_mask = 16
visibility_layer = 16
z_index = -1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m430i")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -278.0
offset_top = -257.0
offset_right = -84.0
offset_bottom = -63.0
scale = Vector2(2.91158, 2.91158)

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 25.0
offset_top = 8.0
offset_right = 182.0
offset_bottom = 31.0

[node name="BrailleGrid" type="GridContainer" parent="Panel"]
layout_mode = 0
offset_left = 57.0
offset_top = 20.0
offset_right = 147.0
offset_bottom = 150.0
scale = Vector2(0.28133, 0.300415)
columns = 2

[node name="Dot0" type="TextureButton" parent="Panel/BrailleGrid"]
layout_mode = 2
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("2_vs6ym")

[node name="Dot1" type="TextureButton" parent="Panel/BrailleGrid"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_vs6ym")

[node name="Dot2" type="TextureButton" parent="Panel/BrailleGrid"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_vs6ym")

[node name="Dot3" type="TextureButton" parent="Panel/BrailleGrid"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_vs6ym")

[node name="Dot4" type="TextureButton" parent="Panel/BrailleGrid"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_vs6ym")

[node name="Dot5" type="TextureButton" parent="Panel/BrailleGrid"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_vs6ym")

[node name="BtnClose" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 39.154
offset_top = 153.868
offset_right = 85.154
offset_bottom = 184.868
text = "Sair"

[node name="BtnEnter" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 106.128
offset_top = 153.525
offset_right = 156.128
offset_bottom = 184.525
text = "Enter"
script = ExtResource("4_dhnb1")
